--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
-//    id("com.google.gms.google-services")
+    id 'dagger.hilt.android.plugin'
 }
 
 //java {
@@ -46,6 +45,10 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    packagingOptions {
+        // Exclude the conflicting file to avoid build issues
+        exclude 'META-INF/gradle/incremental.annotation.processors'
+    }
 
     namespace 'com.example.hwaa'
 }
@@ -53,91 +56,99 @@ android {
 dependencies {
 
     //firebase
-    implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
-    implementation("com.google.firebase:firebase-analytics-ktx")
-    implementation("com.google.firebase:firebase-database-ktx")
-    implementation 'com.google.firebase:firebase-auth-ktx:22.1.2'
-    implementation 'com.google.firebase:firebase-common-ktx:20.3.3'
-    implementation("com.google.android.gms:play-services-auth:20.7.0")
-    implementation("com.google.firebase:firebase-storage-ktx")
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.analytics.ktx)
+    implementation(libs.firebase.database.ktx)
+    implementation libs.firebase.auth.ktx
+    implementation libs.firebase.common.ktx
+    implementation(libs.play.services.auth)
+    implementation(libs.firebase.storage.ktx)
 
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation libs.androidx.work.runtime.ktx
+    implementation libs.androidx.lifecycle.extensions
     //appcompat
-    implementation libraries.appcompat
-    implementation libraries.fragment
+    implementation libs.androidx.appcompat
+    implementation libs.androidx.legacy.support.v4
 
-    implementation libraries.hilt
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-
-    kapt libraries.hiltSupport
-    //implementation libraries.hiltViewModel
-    //kapt libraries.hiltCompiler
+    // hilt
+    implementation libs.hilt.android
+    implementation libs.hilt.compiler
 
     //kotlin
-    implementation libraries.kotlin
+    implementation libs.kotlinx.coroutines.core
+    implementation libs.kotlinx.coroutines.android
 
-    //view
-    implementation libraries.material
-    implementation libraries.constraintlayout
+    //viewxxz
+    implementation libs.material
+    //activity
+    implementation libs.androidx.activity
+    implementation libs.androidx.appcompat
 
     //navigation
-    implementation libraries.navigation
-    implementation libraries.navigationUi
+    implementation libs.androidx.navigation.ui.ktx
+    implementation libs.androidx.navigation.fragment.ktx
 
     //network
-    implementation libraries.retrofit
-    implementation libraries.gson
-    implementation libraries.interceptor
+    implementation libs.retrofit
+//    implementation libs.gson
+//    implementation libs.interceptor
 
     //logger
-    implementation libraries.timber
+//    implementation libs.timber
 
-    implementation libraries.dataStore
+//    implementation libs.dataStore
 
-//    //ViewModel
-    implementation libraries.viewmodel
-//    implementation libraries.lifecycleExt
-    kapt libraries.liveData
+    //ViewModel
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.lifecycle.extensions
+    implementation libs.androidx.fragment.ktx
+    implementation libs.androidx.lifecycle.livedata.ktx
+    implementation libs.androidx.junit.ktx
+    kapt libs.androidx.lifecycle.livedata.ktx
 
     // Loading Image
-    implementation libraries.glide
-    kapt libraries.glideCompiler
+    implementation libs.glide
+    kapt libs.glideCompiler
 
     //noinspection GradleDependency
-    implementation "androidx.core:core-ktx:1.6.0"
-//    debugImplementation libraries.leak
-
-
-    implementation "com.sothree.slidinguppanel:library:3.4.0"
+    implementation libs.androidx.core.ktx.v160
+//    debugImplementation libs.leak
+    implementation libs.library
 
     //Room
-    implementation("androidx.room:room-ktx:2.5.2")
-    kapt("androidx.room:room-compiler:2.5.2")
+    implementation(libs.androidx.room.ktx)
+    kapt(libs.androidx.room.compiler)
 
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    implementation 'com.j256.ormlite:ormlite-android:4.48'
+    implementation libs.recyclerview.v7
+    implementation libs.design
+    implementation libs.glide
+    implementation libs.ormlite.android
 
     //palette
-    implementation 'androidx.palette:palette-ktx:1.0.0'
+    implementation libs.androidx.palette.ktx
 
     //image picker
 
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation libs.retrofit
 
     // GSON
 
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation libs.converter.gson
 
     // coroutine
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation libs.kotlinx.coroutines.android
+    implementation libs.kotlinx.coroutines.core
     // picaso
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation libs.picasso
 
+//    swipe card
+    implementation libs.swipe.card
+
+//    timber
+    implementation libs.timber
+
+//    lottie
+    implementation libs.lottie
 }
