app login_register_logout logic

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath libs.gradle
         classpath libs.kotlinGradlePlugin
         classpath libs.hiltGradlePlugin
+        classpath libs.google.services
     }
 }
 
