--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 //java {
@@ -63,6 +64,8 @@ dependencies {
     implementation libs.firebase.common.ktx
     implementation(libs.play.services.auth)
     implementation(libs.firebase.storage.ktx)
+    implementation libs.firebase.auth
+    implementation libs.firebase.firestore.ktx
 
     implementation libs.androidx.work.runtime.ktx
     implementation libs.androidx.lifecycle.extensions
