--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,8 @@ playServicesAuth = "21.2.0"
 roomKtx = "2.6.1"
 workRuntimeKtx = "2.9.1"
 junitKtx = "1.2.1"
+firebaseAuth = "23.1.0"
+firebaseFirestoreKtx = "25.1.1"
 
 [libraries]
 #noinspection SimilarGradleDependency
@@ -91,6 +93,8 @@ timber = { module = "com.jakewharton.timber:timber", version = "5.0.1" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 #Lottie
 lottie = { module = "com.airbnb.android:lottie", version = "4.1.0" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
