--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ firebaseCommonKtx = "21.0.0"
 glide = "4.15.1"
 googleServices = "4.4.2"
 gradle = "8.0.2"
+imagepicker = "2.1"
 kotlin = "1.8.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -36,6 +37,8 @@ workRuntimeKtx = "2.9.1"
 junitKtx = "1.2.1"
 firebaseAuth = "23.1.0"
 firebaseFirestoreKtx = "25.1.1"
+firebaseDatabase = "21.0.0"
+firebaseStorage = "21.0.1"
 
 [libraries]
 #noinspection SimilarGradleDependency
@@ -58,6 +61,7 @@ firebase-storage-ktx = { module = "com.google.firebase:firebase-storage-ktx" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
+imagepicker = { module = "com.github.dhaval2404:imagepicker", version.ref = "imagepicker" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -95,6 +99,8 @@ androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.
 lottie = { module = "com.airbnb.android:lottie", version = "4.1.0" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
+firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
