--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
         android:name=".BaseApplication"
@@ -36,7 +40,14 @@
         </activity>
         <activity
             android:name=".presentation.activity.main.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <service
+            android:name=".presentation.MyForegroundService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="dataSync" />
+        <receiver android:name=".presentation.NotificationActionReceiver" />
     </application>
 
 </manifest>
